<resources>
    <string name="app_name">Flightyyyy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="movies">Films</string>
    <string name="loading">Loading</string>
    <string name="error_occured">An error occurred, please retry ;)</string>

    <string name="name">
        <b>Name:</b>
        %1$s
    </string>
    <string name="birth_year">
        <b>Birth Year:</b>
        %1$s
    </string>
    <string name="height">
        <b>Height:</b>
        %1$s
    </string>
    <string name="specie_name">
        <b>Specie Name:</b>
        %1$s
    </string>
    <string name="language">
        <b>Language:</b>
        %1$s
    </string>
    <string name="home_world">
        <b>Home World:</b>
        %1$s
    </string>
    <string name="home_world_population">
        <b>Population:</b>
        %1$s
    </string>
    <string name="search_by_names">Search by names of characters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="departure_date">Departure</string>
    <string name="arrival_date">Arrival</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="search_flights">Search Flights</string>
    <string name="an_error_happened">An error occurred</string>
    <string name="please_select_your_origin_airport">please select your origin airport</string>
    <string name="please_select_your_dest_airport">please select your destination airport</string>
    <string name="please_select_your_date">please select your date of travel</string>

    <string name="city_format">%1$s, %2$s</string>
    <string name="please_select_two_airports">Please select two different airports</string>
    <string name="edit_text">edit_text</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">LOGIN</string>
    <string name="client_id">Client ID</string>
    <string name="client_secret">Client Secret</string>
    <string name="please_input_client_id">Please input client ID</string>
    <string name="please_input_client_secret">Please input client secret</string>
    <string name="retry">RETRY</string>
    <string name="no_data_available">No data available</string>
    <string name="an_error_occured">An error occured</string>


</resources>
