<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context="com.aliumujib.flightyy.ui.filter.FiltersFragment">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
    />


    <TextView android:layout_width="wrap_content"
              android:text="@string/app_name"
              android:textAllCaps="true"
              app:layout_constraintTop_toTopOf="@+id/toolbar"
              app:layout_constraintBottom_toBottomOf="@+id/toolbar"
              app:layout_constraintStart_toStartOf="@id/toolbar"
              android:layout_marginStart="16dp"
              android:id="@+id/title"
              android:paddingEnd="8dp"
              android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
              android:layout_height="wrap_content"/>


    <View android:layout_width="100dp"
          android:layout_height="5dp"
          android:id="@+id/ghost_view"
          android:background="@color/colorAccent"
          app:layout_constraintBottom_toBottomOf="@+id/toolbar"
          app:layout_constraintStart_toStartOf="@+id/toolbar"
          android:layout_marginStart="16dp"
          app:layout_constraintEnd_toEndOf="@+id/title"/>

    <com.aliumujib.flightyy.ui.views.TitledEditText
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            app:editTextTitle="@string/origin"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/origin_et"
            app:isClickable="true"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>


    <com.aliumujib.flightyy.ui.views.TitledEditText
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            app:editTextTitle="@string/destination"
            app:isClickable="true"
            android:id="@+id/dest_et"
            app:layout_constraintTop_toBottomOf="@+id/origin_et"
            app:layout_constraintStart_toStartOf="@id/origin_et"
            app:layout_constraintEnd_toEndOf="@id/origin_et"
            android:layout_height="wrap_content"/>


    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.5"
            android:layout_height="match_parent"/>


    <com.aliumujib.flightyy.ui.views.TitledEditText
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            app:editTextTitle="@string/departure_date"
            android:id="@+id/departure_date_et"
            app:isClickable="true"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dest_et"
            app:layout_constraintStart_toStartOf="@id/dest_et"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:layout_height="wrap_content"/>

    <com.aliumujib.flightyy.ui.views.TitledEditText
            android:layout_width="0dp"
            app:editTextTitle="@string/arrival_date"
            android:layout_marginStart="8dp"
            app:isClickable="true"
            android:id="@+id/arrival_date_et"
            app:layout_constraintTop_toTopOf="@+id/departure_date_et"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="@id/dest_et"
            android:layout_height="wrap_content"/>


    <com.aliumujib.flightyy.ui.views.SolidBackgroundButtonView
            android:layout_width="0dp"
            android:layout_marginTop="32dp"
            android:id="@+id/search_button"
            android:text="@string/search_flights"
            app:layout_constraintTop_toBottomOf="@+id/departure_date_et"
            app:layout_constraintStart_toStartOf="@id/departure_date_et"
            app:layout_constraintEnd_toEndOf="@id/arrival_date_et"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
