<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_parent"
        tools:context="com.aliumujib.flightyy.ui.filter.FiltersFragment">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            />


    <TextView android:layout_width="wrap_content"
            android:text="@string/login"
            android:textAllCaps="true"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@id/toolbar"
            android:layout_marginStart="16dp"
            android:id="@+id/title"
            android:paddingEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:layout_height="wrap_content"/>


    <View android:layout_width="100dp"
            android:layout_height="5dp"
            android:id="@+id/ghost_view"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="@+id/title"/>

    <com.aliumujib.flightyy.ui.views.TitledEditText
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            app:editTextTitle="@string/client_id"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/client_id"
            android:transitionName="origin"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>


    <com.aliumujib.flightyy.ui.views.TitledEditText
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            app:editTextTitle="@string/client_secret"
            android:id="@+id/client_secret"
            android:transitionName="destination"
            app:layout_constraintTop_toBottomOf="@+id/client_id"
            app:layout_constraintStart_toStartOf="@id/client_id"
            app:layout_constraintEnd_toEndOf="@id/client_id"
            android:layout_height="wrap_content"/>



    <com.aliumujib.flightyy.ui.views.SolidBackgroundButtonView
            android:layout_width="0dp"
            android:layout_marginTop="32dp"
            android:id="@+id/login_button"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@+id/client_secret"
            app:layout_constraintStart_toStartOf="@id/client_secret"
            app:layout_constraintEnd_toEndOf="@id/client_secret"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
